fixes #99 svg symbols too wide
git-svn-id: http://subversion.assembla.com/svn/SIM_WIN/trunk@125 e0e46c49-be69-4f5a-ad62-21024a331aea

--- a/extension/chrome/skin/maavis_colour.css
+++ b/extension/chrome/skin/maavis_colour.css
@@ -24,7 +24,7 @@ touchkey,
 togglekey,
 chatterkey
 {
-  color: white;
+  color: pink;
   background-color: #2C7DCF;
   border-color: darkblue;
   -moz-border-radius: 30px;
